blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/Service_Contract__c.object-meta.xml
<CustomObject>
    <description>The agreement under which the clinic provides services to one employer or insurer, with its term, pricing basis and renewal date. Created when a deal is won. Holds only commercial terms and aggregate headcount, never information about any patient.</description>
    <label>Service contract</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>