blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/fields/Account_manager__c.field-meta.xml
<CustomField>
    <fullName>Account_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member responsible for the customer after the sale.</description>
    <label>Account manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Service contracts Account manager</relationshipLabel>
    <relationshipName>Service_Contract_Account_manager</relationshipName>
    <type>Lookup</type>
</CustomField>