blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/fields/Annual_value__c.field-meta.xml
<CustomField>
    <fullName>Annual_value__c</fullName>
    <description>Expected yearly revenue from this contract at current prices.</description>
    <label>Annual value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>