blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/fields/Covered_headcount__c.field-meta.xml
<CustomField>
    <fullName>Covered_headcount__c</fullName>
    <description>Number of employees in scope, as told to us by the employer. A count only, never a list of people.</description>
    <label>Covered headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>