blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every contract a customer has had.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service contracts</relationshipLabel>
    <relationshipName>Service_contracts</relationshipName>
    <type>Lookup</type>
</CustomField>