blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/fields/Dpa_signed__c.field-meta.xml
<CustomField>
    <fullName>Dpa_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A data processing agreement is in place before any service starts. Required for every contract.</description>
    <label>Data processing agreement signed</label>
    <type>Checkbox</type>
</CustomField>