blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/fields/Originating_deal__c.field-meta.xml
<CustomField>
    <fullName>Originating_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties a contract to the deal that won it and to later renewal deals.</description>
    <label>Originating deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service contracts</relationshipLabel>
    <relationshipName>Service_contracts</relationshipName>
    <type>Lookup</type>
</CustomField>