blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/fields/Pricing_model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_model__c</fullName>
    <description>How the customer is charged under this contract.</description>
    <label>Pricing model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per appointment</fullName>
            </value>
            <value>
                <fullName>Per employee per month</fullName>
            </value>
            <value>
                <fullName>Annual retainer</fullName>
            </value>
            <value>
                <fullName>Pay as you go</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>