blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service_Contract__c/listViews/Renewals_next_90_days.listView-meta.xml
<ListView>
    <fullName>Renewals_next_90_days</fullName>
    <columns>NAME</columns>
    <columns>Renewal_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,In renewal</value>
    </filters>
    <filters>
        <field>Renewal_date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Renewal_date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:90</value>
    </filters>
    <label>Renewals in the next 90 days</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>